--- a/res/layout/settings_tablet_new.xml
+++ b/res/layout/settings_tablet_new.xml
@@ -13,9 +13,44 @@
 	    android:gravity="center"
 	    android:layout_marginLeft="65dip"
 	    android:layout_marginRight="65dip"
-	    android:background="@drawable/whiteround"
+	    android:background="#FFFFFF"
 	    android:orientation="vertical">
-				
+			
+		<LinearLayout
+		    android:id="@+id/settings_banner"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="left|center_vertical"
+		    android:gravity="left|center_vertical"
+		    android:orientation="horizontal"    			
+		    android:background="#D9D9D9">	    
+		    <ImageView
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/icon_back_black"
+		        />
+		    <ImageView
+		        android:id="@+id/settings_app_icon"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="5dip"
+		        android:layout_marginBottom="5dip"
+		        />		    
+			<TextView    		     
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="left|center_vertical"
+				android:layout_marginTop="8dip"
+				android:layout_marginBottom="8dip"	
+				android:layout_marginLeft="8dip"			
+				android:gravity="center"
+				android:textSize="22sp"
+				android:textColor="#000000"
+				android:text="@string/settings"		
+				android:background="#D9D9D9"
+				/>		    					
+		</LinearLayout>
+		
 		<LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="wrap_content"
@@ -23,20 +58,9 @@
 		    android:gravity="center"
 		    android:layout_marginLeft="10dip"
 		    android:layout_marginRight="10dip"
-		    android:orientation="vertical">    			
-			<TextView    		     
-				android:layout_width="wrap_content"
-				android:layout_height="wrap_content"
-				android:layout_gravity="center"
-				android:layout_marginTop="8dip"
-				android:layout_marginBottom="8dip"				
-				android:gravity="center"
-				android:textSize="26sp"
-				android:textColor="#000000"
-				android:text="@string/settings"		
-				android:textStyle="bold"
-				/>				    				
-							
+		    android:orientation="vertical"    			
+		    android:background="#FFFFFF">
+			    											
 			<include layout="@layout/main_settings" />
 					    		    		    			     		 
 		</LinearLayout>				    		
