--- a/res/layout/video_layer_new.xml
+++ b/res/layout/video_layer_new.xml
@@ -429,8 +429,8 @@
 				android:src="@drawable/icon_expand"							
 				/>									
 		</LinearLayout>
-					
-		<LinearLayout
+		
+		<FrameLayout
 		    android:id="@+id/playbackbody"
 		    android:layout_width="match_parent"
 		    android:layout_height="0dip"
@@ -438,7 +438,12 @@
 		    android:layout_gravity="top"
 		    android:background="#1D1D1D"
 		    android:orientation="vertical"
-		    android:visibility="gone">	      			      	 
+		    android:visibility="gone">	 					
+		<LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="match_parent"
+		    android:layout_gravity="top"
+		    android:orientation="vertical">	      			      	 
 
 	    	<LinearLayout
 			    android:layout_width="match_parent"
@@ -565,7 +570,7 @@
 					<LinearLayout
 					    android:id="@+id/playback_collapser"
 					    android:layout_width="match_parent"
-					    android:layout_height="wrap_content"
+					    android:layout_height="60dip"
 					    android:orientation="horizontal">
 						<ImageView
 					    	android:id="@+id/playback_ephide"
@@ -596,6 +601,8 @@
 					    	android:id="@+id/playback_channel_icon"
 					        android:layout_width="60dip" 
 					        android:layout_height="60dip"
+					        android:layout_gravity="center"
+					        android:gravity="center"
 					        android:padding="6dip"
 					        android:adjustViewBounds="true"
 					        android:scaleType="fitXY"
@@ -615,15 +622,17 @@
 					    	/>		
 					    <FrameLayout
 					    	android:id="@+id/playback_follow"		
-					        android:layout_width="35dip" 
-					        android:layout_height="35dip"
+					        android:layout_width="50dip" 
+					        android:layout_height="50dip"
 					        android:layout_marginRight="10dip"
 					        android:layout_gravity="center"
 					        android:gravity="center">				    				        
 							<ImageView
 						    	android:id="@+id/follow_icon"
-						        android:layout_width="fill_parent" 
-						        android:layout_height="fill_parent"
+						        android:layout_width="35dip" 
+						        android:layout_height="35dip"
+					        	android:layout_gravity="center"
+					        	android:gravity="center"						        
 						        android:padding="2dip"
 						        android:adjustViewBounds="true"
 						        android:scaleType="fitXY"			        
@@ -631,13 +640,22 @@
 						        />					   
 						    <ProgressBar
 							    android:id="@+id/follow_progress"          
-						    	android:layout_width="fill_parent"
-						    	android:layout_height="fill_parent"
-						    	android:layout_gravity="center"
-						    	android:gravity="center"
+						    	android:layout_width="35dip"
+						    	android:layout_height="35dip"
+						        android:layout_gravity="center"
+					        	android:gravity="center"						    	
 						    	style="@android:style/Widget.ProgressBar.Inverse"
 						    	android:visibility="gone"
-						    	/>									        
+						    	/>							
+							<ImageView
+						    	android:id="@+id/follow_hint_circle"
+						        android:layout_width="fill_parent" 
+						        android:layout_height="fill_parent"
+						        android:adjustViewBounds="true"
+						        android:scaleType="fitXY"			        
+								android:src="@drawable/follow_hint_circle"
+								android:visibility="gone"
+						        />							    			        
 					    </FrameLayout>					    	
 						<LinearLayout
 						    android:layout_width="wrap_content"
@@ -725,6 +743,28 @@
 					android:cacheColorHint="@android:color/transparent"
 					/>						
 			</LinearLayout-->							
-	    </LinearLayout>	
+	    </LinearLayout>
+	    <FrameLayout
+	        android:id="@+id/playback_follow_hint_container"
+		    android:layout_width="240dip"
+		    android:layout_height="240dip"
+		    android:layout_marginRight="0dip"
+		    android:layout_gravity="bottom|right"
+		    android:gravity="bottom|right"
+		    android:visibility="gone">	
+			<ImageView
+			    android:id="@+id/playback_follow_hint"
+			    android:layout_width="240dip"			    
+			    android:layout_height="100dip"
+			    android:layout_marginBottom="-25dip"
+			    android:layout_gravity="center"
+			    android:gravity="center"
+			    android:src="@drawable/icon_tutorial_following"
+			    android:alpha="1"
+			    android:scaleType="fitXY"
+			    android:adjustViewBounds="true"
+			    />
+		</FrameLayout>
+	    </FrameLayout>	
 	   
 	</LinearLayout> 			
