--- a/res/layout/direct_ad_layer.xml
+++ b/res/layout/direct_ad_layer.xml
@@ -48,21 +48,54 @@
 		    android:padding="6dip"
 		    android:visibility="visible">
 		    <TextView
+		       	android:id="@+id/skip_ad_button_phase_1_text_1"		        
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"  
 			    android:layout_gravity="right|top"
 			    android:gravity="right|top"   
-			    android:text="You can skip ads"
+			    android:text="@string/skip_ads_1"
 			    android:textSize="18sp"
+				android:textColor="#AAAAAA"			    
 			    />
-		    <TextView
+			<LinearLayout 
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"  
-			    android:layout_gravity="right|top"
-			    android:gravity="right|top"   
-			    android:text="after 6 seconds"
-			    android:textSize="18sp"			    
-			    />	    
+			    android:layout_gravity="right|center_vertical"
+			    android:gravity="right|center_vertical"
+			    android:orientation="horizontal"
+			    android:visibility="visible">		    
+			    <TextView
+			       	android:id="@+id/skip_ad_button_phase_1_text_2"		        		        
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"  
+				    android:layout_gravity="right|top"
+				    android:gravity="right|top"   
+				    android:text="@string/skip_ads_2"
+				    android:textSize="18sp"			    
+				    android:textColor="#AAAAAA"
+				    />	    
+			    <TextView
+			       	android:id="@+id/skip_ad_button_countdown"		        		        
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content" 
+				    android:layout_marginLeft="3dip"
+				    android:layout_marginRight="3dip" 
+				    android:layout_gravity="right|top"
+				    android:gravity="right|top"   
+				    android:textSize="18sp"			    
+				    android:textColor="#FFFFFF"				    
+				    />	  				    
+			    <TextView
+			       	android:id="@+id/skip_ad_button_phase_1_text_3"		        		        
+				    android:layout_width="wrap_content"
+				    android:layout_height="wrap_content"  
+				    android:layout_gravity="right|top"
+				    android:gravity="right|top"   
+				    android:text="@string/skip_ads_3"
+				    android:textSize="18sp"		
+				    android:textColor="#AAAAAA"				    	    
+				    />	  				    
+			</LinearLayout>
 		</LinearLayout>
 
 		<LinearLayout 
@@ -75,12 +108,14 @@
 		    android:padding="6dip"
 		    android:visibility="invisible">
 		    <TextView
+		       	android:id="@+id/skip_ad_button_phase_2_text"
 			    android:layout_width="wrap_content"
 			    android:layout_height="wrap_content"  
 			    android:layout_gravity="right|top"
 			    android:gravity="right|top"   
-			    android:text="Skip AD"
+			    android:text="@string/skip_ad"
 			    android:textSize="24sp"
+			    android:textColor="#FFFFFF"		
 			    />    
 		</LinearLayout>
 				
