--- a/res/layout/menu_layer.xml
+++ b/res/layout/menu_layer.xml
@@ -2,6 +2,8 @@
     android:id="@+id/menu_layer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="left|top"
+    android:gravity="left|top"
     android:background="#E0E0E0"
     android:orientation="vertical"
     android:visibility="visible">
@@ -35,7 +37,8 @@
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:layout_marginTop="10dip"
-		    android:orientation="horizontal">
+		    android:orientation="horizontal"
+		    android:visibility="invisible">
 			<ImageView					    	    
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"	
