--- a/res/layout/signin_tablet_new.xml
+++ b/res/layout/signin_tablet_new.xml
@@ -16,16 +16,41 @@
 	    android:layout_marginRight="65dip"
 	    android:orientation="vertical">
 				
-		<TextView    		     
-			android:layout_width="fill_parent"
-			android:layout_height="60dip"
-			android:layout_gravity="center"
-			android:gravity="center"
-			android:textSize="18sp"
-			android:textColor="#000000"
-			android:text="Log in / Sign Up"	
-			android:background="#FFFFFF"								
-			/>		    
+		<LinearLayout
+		    android:id="@+id/signin_banner"
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="left|center_vertical"
+		    android:gravity="left|center_vertical"
+		    android:orientation="horizontal"    			
+		    android:background="#D9D9D9">	    
+		    <ImageView
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:src="@drawable/icon_back_black"
+		        />
+		    <ImageView
+		        android:id="@+id/signin_app_icon"
+		        android:layout_width="wrap_content"
+		        android:layout_height="wrap_content"
+		        android:layout_marginTop="5dip"
+		        android:layout_marginBottom="5dip"
+		        />		    
+			<TextView    		     
+				android:layout_width="wrap_content"
+				android:layout_height="wrap_content"
+				android:layout_gravity="left|center_vertical"
+				android:layout_marginTop="8dip"
+				android:layout_marginBottom="8dip"	
+				android:layout_marginLeft="8dip"			
+				android:gravity="center"
+				android:textSize="22sp"
+				android:textColor="#000000"
+				android:text="Log in / Sign up"		
+				android:background="#D9D9D9"
+				/>		    					
+		</LinearLayout>
+	    
 			
 		<LinearLayout
 		    android:layout_width="match_parent"
