--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -27,7 +27,7 @@
 				    
 		    <include layout="@layout/signin_phone_new" />
 		   
-		    <include layout="@layout/terms_layer" />
+		    <include layout="@layout/terms_layer_new" />
 		    	    
 		    <include layout="@layout/guide_layer" />
 	
