--- a/res/layout/app_item.xml
+++ b/res/layout/app_item.xml
@@ -4,58 +4,65 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
 	android:descendantFocusability="blocksDescendants"
-    android:padding="6dip">    
-    <LinearLayout
+    android:background="#D9D9D9">    
+	<LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
-	    android:orientation="horizontal">
-	    <ImageView
-	        android:id="@+id/icon"
-	        android:layout_width="60dip"
-	        android:layout_height="60dip"
-	        android:adjustViewBounds="true"
-	        android:scaleType="fitXY"
-	        />	    
-	    <TextView
-	        android:id="@+id/title"
-	        android:layout_width="0dip"
+	    android:layout_height="match_parent"
+	    android:layout_marginBottom="10dip"
+	    android:orientation="vertical"
+		android:descendantFocusability="blocksDescendants"
+	    android:padding="6dip"
+	    android:background="#FFFFFF">       
+	    <LinearLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:orientation="horizontal">
+		    <ImageView
+		        android:id="@+id/icon"
+		        android:layout_width="60dip"
+		        android:layout_height="60dip"
+		        android:adjustViewBounds="true"
+		        android:scaleType="fitXY"
+		        />	    
+		    <TextView
+		        android:id="@+id/title"
+		        android:layout_width="0dip"
+		        android:layout_height="fill_parent"
+		        android:layout_weight="1"
+		        android:layout_marginLeft="10dip"
+		        android:layout_gravity="left|center_vertical"	        
+		        android:gravity="left|center_vertical"
+		        android:textSize="18sp"
+		        android:textColor="#000000"
+		        android:textStyle="bold"
+		        android:maxLines="2"
+		        android:ellipsize="end"
+		        />   
+	    </LinearLayout>
+	   	<TextView
+	        android:id="@+id/desc"
+	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:layout_weight="1"
-	        android:layout_marginLeft="6dip"
-	        android:layout_gravity="left|top"	        
-	        android:gravity="left|top"
-	        android:textSize="16dip"
-	        android:textColor="#000000"
-	        android:textStyle="bold"
-	        />
+	        android:layout_marginTop="4dip"
+	        android:textSize="14sp"
+		    android:textColor="#000000"      
+		    android:maxLines="2"
+		    android:ellipsize="end"
+	        /> 	
 	    <TextView
 	        android:id="@+id/download_button"
 	        android:layout_width="wrap_content"
 	        android:layout_height="wrap_content"
+	        android:layout_marginTop="4dip"
 	        android:layout_marginLeft="6dip"	  	        
 	        android:layout_marginRight="6dip"	        
 	        android:layout_gravity="right|center_vertical"
 	        android:gravity="right|center_vertical"
-	        android:textSize="11dip"
+	        android:textSize="15sp"
 	        android:text="@string/download"
-	        android:background="@drawable/orangeborder"
-	        android:textColor="#FD9025"	        
+	        android:background="@drawable/btn_download"
+	        android:textColor="#FFFFFF"	        
 	        android:padding="4dip"
-	        />	    
-    </LinearLayout>
-   	<TextView
-        android:id="@+id/desc"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:textSize="13dip"
-	    android:textColor="#000000"       
-        />
-    <LinearLayout
-        android:id="@+id/bottom_bar"
-	    android:layout_width="match_parent"
-	    android:layout_height="1px"
-	    android:layout_marginTop="5dip"
-	    android:orientation="horizontal"
-	    android:background="#C2C2C2"
-	    />   	
+	        />	 	        
+	</LinearLayout>	    
 </LinearLayout>
