--- a/res/layout/channel.xml
+++ b/res/layout/channel.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF">
+    android:background="#D9D9D9">
     <FrameLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
@@ -11,7 +11,7 @@
 		android:layout_marginRight="0dip"
 		android:layout_marginTop="5dip"
 		android:layout_marginBottom="5dip"	    
-		android:background="@drawable/whiteroundborder">	    
+		android:background="#FFFFFF">	    
 	    <LinearLayout
 		    android:layout_width="match_parent"
 		    android:layout_height="match_parent"
@@ -26,21 +26,7 @@
 			       	android:layout_height="fill_parent"
 			       	android:adjustViewBounds="true" 
 			       	android:scaleType="centerCrop"
-			        />
-			    <ImageView
-			       	android:layout_width="wrap_content" 
-			       	android:layout_height="wrap_content"	
-			       	android:layout_gravity="top|left"
-			       	android:gravity="top|left"
-			       	android:src="@drawable/upper_left_white"
-			        />		
-			    <ImageView
-			       	android:layout_width="wrap_content" 
-			       	android:layout_height="wrap_content"	
-			       	android:layout_gravity="top|right"
-			       	android:gravity="top|right"
-			       	android:src="@drawable/upper_right_white"
-			        />			            
+			        />					            
 				<ImageView				    
 					android:layout_width="60dip"
 					android:layout_height="40dip"
@@ -153,7 +139,7 @@
 						android:layout_height="wrap_content"
 						android:layout_marginLeft="8dip"									
 						android:layout_gravity="center_vertical|left"								
-						android:textSize="26sp"
+						android:textSize="16sp"
 						android:textColor="#555555"
 						android:singleLine="true"	
 						android:gravity="center_vertical|left"							
@@ -166,10 +152,10 @@
 						android:layout_width="wrap_content"
 						android:layout_height="wrap_content"
 						android:layout_marginLeft="2dip"						
-						android:layout_marginRight="0dip"					
+						android:layout_marginRight="6dip"					
 						android:layout_marginBottom="2dip"
 						android:layout_gravity="bottom|left"								
-						android:textSize="20sp"
+						android:textSize="14sp"
 						android:textColor="#777777"		
 						android:singleLine="true"	
 						android:gravity="bottom|left"							
