--- a/res/layout/channel_tablet.xml
+++ b/res/layout/channel_tablet.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:background="#FFFFFF">
+    android:background="#D9D9D9">
 
     <FrameLayout
 	    android:layout_width="match_parent"
@@ -12,7 +12,7 @@
 		android:layout_marginLeft="5dip"
 		android:layout_marginRight="5dip"
 		android:layout_marginTop="5dip"    
-		android:background="@drawable/grayround">
+		android:background="#FFFFFF">
 	    	
         <LinearLayout
 		    android:layout_width="match_parent"
