--- a/res/layout/home_page.xml
+++ b/res/layout/home_page.xml
@@ -8,56 +8,8 @@
 	<LinearLayout
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:background="#FFFFFF"
+	    android:background="#D9D9D9"
 	    android:orientation="vertical">	    		    
-	    
-	 	<!-- LinearLayout
-		    android:id="@+id/set_titles"
-		    android:layout_width="match_parent"
-		    android:layout_height="35dip"
-		    android:gravity="center"
-		    android:background="#1D1D1D"
-		    android:orientation="horizontal">	 
-		   	<TextView
-			    android:id="@+id/left_set_title"			        
-				android:layout_width="0dip"
-				android:layout_height="fill_parent"
-				android:layout_weight="1"
-				android:layout_gravity="center"			
-				android:gravity="center"
-				android:textSize="20sp"
-				android:textColor="#777777"									
-				android:singleLine="true"		
-				android:ellipsize="end"					
-				android:text="Left Set"	
-				android:paddingLeft="6dip"				
-				/>			    
-		   	<TextView
-			    android:id="@+id/primary_set_title"			        
-				android:layout_width="wrap_content"
-				android:layout_height="fill_parent"
-				android:layout_weight="1"				
-				android:layout_gravity="center"			
-				android:gravity="center"
-				android:textSize="20sp"
-				android:textColor="#FFFFFF"									
-				android:singleLine="true"		
-				/>	
-		   	<TextView
-			    android:id="@+id/right_set_title"			        
-				android:layout_width="0dip"
-				android:layout_height="fill_parent"
-				android:layout_weight="1"				
-				android:layout_gravity="center"			
-				android:gravity="center"
-				android:textSize="20sp"
-				android:textColor="#777777"								
-				android:singleLine="true"		
-				android:ellipsize="end"					
-				android:text="Right Set"
-				android:paddingRight="6dip"
-				/>							    
-	    </LinearLayout-->
 	    
 		<LinearLayout
 		    android:layout_width="match_parent"
@@ -108,7 +60,8 @@
 						    android:layout_marginRight="15dip"
 						    android:layout_gravity="right|bottom"
 						    android:gravity="right|bottom"	    
-						    android:orientation="horizontal">						    
+						    android:orientation="horizontal"
+						    android:visibility="invisible">						    
 						    <ImageView 
 						        android:id="@+id/mode_thumbs"
 						        android:layout_width="wrap_content"
@@ -136,7 +89,8 @@
 			    	/-->
 				<FrameLayout
 				    android:layout_width="fill_parent" 
-					android:layout_height="fill_parent">
+					android:layout_height="fill_parent"
+					android:background="#D9D9D9">
 				    <TextView					        
 				    	android:id="@+id/pull_to_refresh"
 				    	android:layout_width="fill_parent"
@@ -161,6 +115,7 @@
 						android:cacheColorHint="@android:color/transparent"
 						android:dividerHeight="0dp"
 						android:divider="@null"
+						android:background="#D9D9D9"
 						/>
 					<ProgressBar
 					    android:id="@+id/set_progress"          
