--- a/res/layout/store_item.xml
+++ b/res/layout/store_item.xml
@@ -7,24 +7,18 @@
 	<LinearLayout
 	    android:layout_width="fill_parent"
 	    android:layout_height="wrap_content"
-	    android:layout_marginBottom="10dip"    
+	    android:layout_marginBottom="12dip"    
 		android:id="@+id/square"
-	    android:padding="4dip"    
-	    android:background="@drawable/grayborder"
+	    android:background="#FFFFFF"
 	    android:orientation="vertical">           
 		<FrameLayout
 		    android:layout_width="fill_parent"
 		    android:layout_height="fill_parent"
-		    android:layout_marginTop="5dip"
-		    android:layout_marginBottom="5dip"
-		    android:layout_marginLeft="5dip"
-		    android:layout_marginRight="5dip"
 		    android:background="#00000000">      		    
 		    <ImageView
 		    	android:id="@+id/epicon"
 		        android:layout_width="fill_parent" 
 		        android:layout_height="fill_parent"
-		        android:padding="6dip"
 		        android:scaleType="centerCrop"
 		        android:adjustViewBounds="true"
 		        />
@@ -37,16 +31,18 @@
 			    android:layout_width="0dip"
 			    android:layout_height="wrap_content"
 			    android:layout_weight="1"
+			    android:layout_marginTop="12dip"
+			    android:layout_marginBottom="12dip"
 			    android:orientation="vertical"> 		    		
 				<TextView
 			    	android:id="@+id/title"	    
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"	
 					android:layout_gravity="bottom"			
-					android:layout_marginLeft="6dip"
-					android:layout_marginRight="6dip"	
-					android:textSize="20sp"
-					android:textColor="#000000"
+					android:layout_marginLeft="12dip"
+					android:layout_marginRight="12dip"	
+					android:textSize="17sp"
+					android:textColor="#555555"
 					android:gravity="left"
 					android:paddingLeft="3dip"
 					android:singleLine="true"
@@ -57,11 +53,11 @@
 					android:layout_width="fill_parent"
 					android:layout_height="wrap_content"	
 					android:layout_gravity="bottom"			
-					android:layout_marginLeft="6dip"
-					android:layout_marginRight="6dip"	
-					android:layout_marginTop="-5dip"
-					android:textSize="14sp"
-					android:textColor="#A0A0A0"
+					android:layout_marginLeft="12dip"
+					android:layout_marginRight="12dip"	
+					android:layout_marginTop="0dip"
+					android:textSize="13sp"
+					android:textColor="#AAAAAA"
 					android:gravity="left"
 					android:paddingLeft="3dip"
 					android:singleLine="true"
