--- a/res/layout/notification_settings_new.xml
+++ b/res/layout/notification_settings_new.xml
@@ -103,7 +103,8 @@
 		    android:layout_height="wrap_content"	
 		    android:layout_weight="0.45"    
 		    android:orientation="horizontal">	   	
-			<ImageView					    	    
+			<ImageView			
+			    android:id="@+id/vibrate_when_notified_image"		    	    
 				android:layout_width="wrap_content"
 				android:layout_height="wrap_content"	
 				android:layout_marginRight="8dip"
