--- a/res/layout/signin_tablet_new.xml
+++ b/res/layout/signin_tablet_new.xml
@@ -9,7 +9,7 @@
     android:visibility="gone">
 	<LinearLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="475dip"
 	    android:layout_gravity="center"
 	    android:gravity="center"
 	    android:layout_marginLeft="65dip"
