--- a/res/layout/social_item.xml
+++ b/res/layout/social_item.xml
@@ -47,17 +47,39 @@
 			        android:maxLines="2"
 			        android:ellipsize="end"
 			        />	    
-			    <TextView
-			        android:id="@+id/message_ago"
-			        android:layout_width="fill_parent"
+			    <LinearLayout
+			    	android:layout_width="match_parent"
+			    	android:layout_height="wrap_content"
+			    	android:orientation="horizontal">	   			        
+				    <TextView
+				        android:id="@+id/message_ago"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+				        android:layout_marginLeft="6dip"
+				        android:layout_gravity="left|top"	        
+				        android:gravity="left|top"
+				        android:textSize="12sp"
+				        android:textColor="#999999"
+				        android:text="2 days ago"
+				        />	    
+				    <TextView
+				        android:id="@+id/message_source"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+				        android:layout_gravity="left|top"	        
+				        android:gravity="left|top"
+				        android:textSize="12sp"
+				        android:textColor="#999999"
+				        />	 				        		
+			    </LinearLayout>        
+			    <ImageView
+			        android:id="@+id/soc_image"
+			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
-			        android:layout_marginLeft="6dip"
-			        android:layout_gravity="left|top"	        
-			        android:gravity="left|top"
-			        android:textSize="12sp"
-			        android:textColor="#999999"
-			        android:text="2 days ago"
-			        />	    		        
+				    android:layout_gravity="left|top"	        
+				    android:gravity="left|top"			        
+			        android:visibility="gone"
+			        />
 		    </LinearLayout>
 	    </LinearLayout>
 	   	<TextView
