--- a/res/layout/social_layer.xml
+++ b/res/layout/social_layer.xml
@@ -27,7 +27,7 @@
         android:textColor="#000000"
 		android:singleLine="true"
 		android:ellipsize="end"		
-		android:text="Social Feed"	        
+		android:text="@string/social_feed"	        
         />	  		
     <LinearLayout           
 		android:layout_width="fill_parent" 
@@ -69,5 +69,6 @@
         android:textColor="#FF0000"
         android:textStyle="bold"
         android:text="Stop!"
+        android:visibility="gone"
         /> 				
 </LinearLayout>
