--- a/res/layout/social_item.xml
+++ b/res/layout/social_item.xml
@@ -23,18 +23,33 @@
 		    	android:layout_width="match_parent"
 		    	android:layout_height="wrap_content"
 		    	android:orientation="vertical">	   
-			    <TextView
-			        android:id="@+id/soc_counter"
-			        android:layout_width="wrap_content"
-			        android:layout_height="wrap_content"
-			        android:layout_weight="1"
-			        android:layout_marginLeft="6dip"
-			        android:layout_gravity="left|top"	        
-			        android:gravity="left|top"
-			        android:textSize="32dip"
-			        android:textColor="#000000"
-			        android:textStyle="bold"
-			        /> 	    	     
+			    <LinearLayout
+			    	android:layout_width="match_parent"
+			    	android:layout_height="wrap_content"
+			    	android:orientation="horizontal">	  		    	
+				    <TextView
+				        android:id="@+id/soc_counter"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+				        android:layout_marginLeft="6dip"
+				        android:layout_gravity="left|top"	        
+				        android:gravity="left|top"
+				        android:textSize="32dip"
+				        android:textColor="#000000"
+				        android:textStyle="bold"
+				        /> 	    	
+				    <TextView
+				        android:id="@+id/soc_what"
+				        android:layout_weight="1"
+				        android:layout_width="0dip"
+				        android:layout_height="wrap_content"
+				        android:layout_marginRight="6dip"
+				        android:layout_gravity="right|top"	        
+				        android:gravity="right|top"
+				        android:textSize="18dip"
+				        android:textColor="#444444"
+				        /> 				          
+			    </LinearLayout>   
 			    <TextView
 			        android:id="@+id/title"
 			        android:layout_width="fill_parent"
