--- a/res/layout/menu_item.xml
+++ b/res/layout/menu_item.xml
@@ -3,7 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="60dip"
     android:orientation="horizontal"
-    android:background="#FF0000">
+    android:background="#FFFFFF">
 	<ImageView				
 	    android:id="@+id/icon"	    	    
 		android:layout_width="30dip"
