--- a/res/layout/message_layer.xml
+++ b/res/layout/message_layer.xml
@@ -2,6 +2,8 @@
     android:id="@+id/messagelayer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_gravity="top"
+    android:gravity="top"
     android:background="#FFFFFF"
     android:orientation="vertical"
     android:visibility="gone">		 
