--- a/res/layout/social_item.xml
+++ b/res/layout/social_item.xml
@@ -8,12 +8,12 @@
 	    android:id="@+id/social_block"	    
 	    android:layout_width="match_parent"
 	    android:layout_height="match_parent"
-	    android:layout_marginTop="8dip"
-	    android:layout_marginLeft="8dip"
-	    android:layout_marginRight="8dip"	    	    	    
+	    android:layout_marginTop="10dip"
+	    android:layout_marginLeft="10dip"
+	    android:layout_marginRight="10dip"	    	    	    
 	    android:orientation="vertical"
 		android:descendantFocusability="blocksDescendants"
-		android:background="@drawable/notification_wrap_episode"	
+		android:background="#FFFFFF"	
 	    android:padding="8dip">      
 	    <LinearLayout
 		    android:layout_width="match_parent"
@@ -21,7 +21,7 @@
 		    android:orientation="horizontal">    
 		    <LinearLayout
 		    	android:layout_width="match_parent"
-		    	android:layout_height="wrap_content"
+		    	android:layout_height="match_parent"
 		    	android:orientation="vertical">	   
 			    <LinearLayout
 			    	android:layout_width="match_parent"
@@ -75,7 +75,6 @@
 				        android:gravity="left|top"
 				        android:textSize="12sp"
 				        android:textColor="#999999"
-				        android:text="2 days ago"
 				        />	    
 				    <TextView
 				        android:id="@+id/message_source"
@@ -87,33 +86,146 @@
 				        android:textColor="#999999"
 				        />	 				        		
 			    </LinearLayout>        
-			    <ImageView
-			        android:id="@+id/soc_image"
+			   	<TextView
+			        android:id="@+id/text"
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:layout_marginTop="8dip"
+			        android:layout_marginBottom="8dip"
+			        android:textSize="14sp"
+				    android:textColor="#777777"       
+			        />  		
+			       
+			    <!-- WebView
+			        android:id="@+id/webtext"
+			        android:layout_width="match_parent"
+			        android:layout_height="match_parent"
+			        android:layout_marginTop="8dip"
+			        android:layout_marginBottom="8dip"
+			        android:background="#FFFFFF"
+			        /-->
+			    
+			    <FrameLayout
+			        android:id="@+id/soc_image_container"
+			    	android:layout_width="wrap_content"
+			    	android:layout_height="wrap_content"
+			    	android:orientation="vertical"
+			    	android:visibility="gone">	       	    
+				    <ImageView
+				        android:id="@+id/soc_image"
+				        android:layout_width="wrap_content"
+				        android:layout_height="wrap_content"
+					    android:layout_gravity="left|top"	        
+					    android:gravity="left|top"			        
+				        />
+				    <ImageView		
+				        android:id="@+id/soc_image_play"				        		    
+						android:layout_width="50dip"
+						android:layout_height="50dip"
+						android:layout_gravity="center"		
+						android:gravity="center"	
+						android:src="@drawable/icon_playlist"		
+						android:visibility="visible"						
+						/>			
+				</FrameLayout>    
+			    <LinearLayout
+			        android:id="@+id/soc_mosaic"
+			    	android:layout_width="match_parent"
+			    	android:layout_height="wrap_content"
+			    	android:orientation="vertical">	   
+				    <LinearLayout
+				        android:id="@+id/soc_mosaic_row_1"
+				    	android:layout_width="match_parent"
+				    	android:layout_height="wrap_content"
+				    	android:orientation="horizontal">		
+					    <ImageView
+					        android:id="@+id/soc_image_1"
+					        android:layout_weight="1"
+					        android:layout_width="0dip"
+					        android:layout_height="wrap_content"		        
+					        android:visibility="gone"
+					        />		
+					    <ImageView
+					        android:id="@+id/soc_image_2"
+					        android:layout_weight="1"
+					        android:layout_width="0dip"
+					        android:layout_height="wrap_content"
+					        android:layout_marginLeft="8dip"		        
+					        android:visibility="gone"
+					        />	
+					    <ImageView
+					        android:id="@+id/soc_image_3"
+					        android:layout_weight="1"
+					        android:layout_width="0dip"
+					        android:layout_height="wrap_content"		 
+					        android:layout_marginLeft="8dip"						               
+					        android:visibility="gone"
+					        />						        					        		    	
+				    </LinearLayout>
+				    <LinearLayout
+				        android:id="@+id/soc_mosaic_row_2"
+				    	android:layout_width="match_parent"
+				    	android:layout_height="wrap_content"
+				    	android:orientation="horizontal">		
+					    <ImageView
+					        android:id="@+id/soc_image_4"
+					        android:layout_weight="1"
+					        android:layout_width="0dip"
+					        android:layout_height="wrap_content"		        
+					        android:visibility="gone"
+					        />		
+					    <ImageView
+					        android:id="@+id/soc_image_5"
+					        android:layout_weight="1"
+					        android:layout_width="0dip"
+					        android:layout_height="wrap_content"		    
+					        android:layout_marginLeft="8dip"						            
+					        android:visibility="gone"
+					        />	
+					    <ImageView
+					        android:id="@+id/soc_image_6"
+					        android:layout_weight="1"
+					        android:layout_width="0dip"
+					        android:layout_height="wrap_content"		        
+					        android:layout_marginLeft="8dip"						        
+					        android:visibility="gone"
+					        />						        					        		    	
+				    </LinearLayout>			    
+				</LinearLayout>		
+			    <TextView
+			        android:id="@+id/link_name"
 			        android:layout_width="wrap_content"
 			        android:layout_height="wrap_content"
-				    android:layout_gravity="left|top"	        
-				    android:gravity="left|top"			        
+			        android:layout_marginLeft="6dip"
+			        android:layout_gravity="left|top"	        
+			        android:gravity="left|top"
+			        android:textSize="12sp"
+			        android:textColor="#999999"
 			        android:visibility="gone"
-			        />
+			        />		
+			    <TextView
+			        android:id="@+id/link_description"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginLeft="6dip"
+			        android:layout_gravity="left|top"	        
+			        android:gravity="left|top"
+			        android:textSize="12sp"
+			        android:textColor="#666666"
+			        android:visibility="gone"			        
+			        />				        		  
+			    <TextView
+			        android:id="@+id/link_caption"
+			        android:layout_width="wrap_content"
+			        android:layout_height="wrap_content"
+			        android:layout_marginLeft="6dip"
+			        android:layout_gravity="left|top"	        
+			        android:gravity="left|top"
+			        android:textSize="12sp"
+			        android:textColor="#999999"
+			        android:visibility="gone"			        
+			        />				          
 		    </LinearLayout>
 	    </LinearLayout>
-	   	<TextView
-	        android:id="@+id/text"
-	        android:layout_width="match_parent"
-	        android:layout_height="wrap_content"
-	        android:layout_marginTop="8dip"
-	        android:textSize="14sp"
-		    android:textColor="#777777"       
-		    android:maxLines="2"
-		    android:ellipsize="end"
-	        />
-	    <!-- LinearLayout
-	        android:id="@+id/bottom_bar"
-		    android:layout_width="match_parent"
-		    android:layout_height="1px"
-		    android:layout_marginTop="5dip"
-		    android:orientation="horizontal"
-		    android:background="#C2C2C2"
-		    /-->   	
 	</LinearLayout>
 </LinearLayout>
