--- a/res/layout/social_layer.xml
+++ b/res/layout/social_layer.xml
@@ -2,7 +2,7 @@
     android:id="@+id/sociallayer"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="#FFFFFF"
+   	android:background="#D9D9D9"
     android:orientation="vertical"
     android:visibility="gone">		 
 	    
@@ -46,9 +46,6 @@
 			android:id="@+id/social_list"
 			android:layout_width="fill_parent" 
 			android:layout_height="fill_parent"
-			android:layout_marginLeft="10dip"
-			android:layout_marginRight="10dip"
-			android:layout_marginTop="10dip"
 			android:layout_gravity="top|center_horizontal"
 			android:gravity="top|center_horizontal"				
 			android:drawSelectorOnTop="false"
