Added new App - YourApp3

--- a/res/values-zh/mso.xml
+++ b/res/values-zh/mso.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <!-- 9x9 -->
+    <!--  
    	<string name="app_name">9x9.tv</string> 
 	<drawable name="app_icon_ptr">@drawable/nine_launch_logo</drawable>    	  	
     <string name="white_label">portal</string>
@@ -14,7 +15,8 @@
     <string name="signin_bg">nine_bg_open</string>      
     <string name="set_banner">nine_banner</string>        
 	<string name="fb_app_id">1429057570658015</string>
-	  			
+	-->
+		  			
 	<!-- Joey Graceffa -->
     <!--  
     <string name="app_name">JoeyGraceffa on Flipr Unofficial</string>
@@ -662,6 +664,21 @@
     <string name="fb_app_id">361253423962738</string>
 	-->
 	
+    <!-- YourApp3 -->
+    <string name="app_name">Your FLIPr App3</string>
+	<drawable name="app_icon_ptr">@drawable/yourapp_launch_logo</drawable>       	
+    <string name="white_label">yourapp3</string>
+    <string name="mso">yourapp3</string>
+    <string name="default_region">en</string>
+    <string name="logo">yourapp_logo</string>
+    <string name="splash_background">yourapp_bg_open</string>
+    <string name="splash_foreground">yourapp_open_logo</string>
+    <string name="splash_slogan"></string>
+    <string name="signin_logo">yourapp_logo_signin</string>
+    <string name="signin_bg">yourapp_bg_open</string>
+    <string name="set_banner">yourapp_banner</string>
+    <string name="fb_app_id">361253423962738</string>
+
     <!-- dingdingtv -->
     <!-- 
     <string name="app_name">DingDingTV</string>
