--- a/res/layout/apps_layer.xml
+++ b/res/layout/apps_layer.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#D9D9D9"
     android:orientation="vertical"
-    android:visibility="gone">		 
+    android:visibility="visible">		 
 	    
     <LinearLayout           
 		android:layout_width="fill_parent" 
