--- a/res/layout/settings_phone_new.xml
+++ b/res/layout/settings_phone_new.xml
@@ -4,7 +4,7 @@
     android:layout_height="match_parent"
     android:background="#D7D7D7"
     android:orientation="vertical"
-    android:visibility="gone">
+    android:visibility="visible">
 
     <LinearLayout           
 		android:layout_width="fill_parent" 
@@ -20,7 +20,7 @@
         android:layout_height="wrap_content"
         android:layout_weight="1">
         
-        <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+        <FrameLayout
 		    android:layout_width="fill_parent"
 		    android:layout_height="wrap_content"
 		    android:background="#D7D7D7">
