--- a/res/layout/social_item.xml
+++ b/res/layout/social_item.xml
@@ -26,7 +26,8 @@
 			    <LinearLayout
 			    	android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
-			    	android:orientation="horizontal">	  		    	
+			    	android:orientation="horizontal"
+			    	android:visibility="gone">	  		    	
 				    <TextView
 				        android:id="@+id/soc_counter"
 				        android:layout_width="wrap_content"
@@ -86,7 +87,7 @@
 				        android:textColor="#999999"
 				        />	 				        		
 			    </LinearLayout>        
-			   	<TextView
+			   	<!-- TextView
 			        android:id="@+id/text"
 			        android:layout_width="match_parent"
 			        android:layout_height="wrap_content"
@@ -94,8 +95,15 @@
 			        android:layout_marginBottom="8dip"
 			        android:textSize="14sp"
 				    android:textColor="#777777"       
-			        />  		
+			        /-->  		
 			       
+			   	<LinearLayout
+			   	    android:id="@+id/line_by_line"
+			   	    android:layout_width="match_parent"
+			   	    android:layout_height="wrap_content"
+			   	    android:orientation="vertical"
+			   	    />
+			   	
 			    <!-- WebView
 			        android:id="@+id/webtext"
 			        android:layout_width="match_parent"
