--- a/res/layout/social_item.xml
+++ b/res/layout/social_item.xml
@@ -50,19 +50,43 @@
 				        android:textSize="18dip"
 				        android:textColor="#444444"
 				        /> 				          
-			    </LinearLayout>   
+			    </LinearLayout>  
 			    <TextView
-			        android:id="@+id/title"
+			        android:id="@+id/retweeted"
 			        android:layout_width="fill_parent"
 			        android:layout_height="wrap_content"
 			        android:layout_marginLeft="6dip"
 			        android:layout_gravity="left|top"	        
 			        android:gravity="left|top"
-			        android:textSize="20sp"
-			        android:textColor="#555555"
-			        android:maxLines="2"
-			        android:ellipsize="end"
-			        />	    
+			        android:textSize="16sp"
+			        android:textColor="#777777"
+			        android:visibility="gone"
+			        />	 
+			    <LinearLayout
+			        android:layout_width="match_parent"
+			        android:layout_height="wrap_content"
+			        android:orientation="horizontal">
+				    <ImageView
+				        android:id="@+id/soc_user_thumb"
+				        android:layout_width="50dip"
+				        android:layout_height="50dip"
+					    android:layout_gravity="left|top"	        
+					    android:gravity="left|top"			  
+					    android:layout_marginRight="8dip"      
+				        />
+				    <TextView
+				        android:id="@+id/title"
+				        android:layout_width="fill_parent"
+				        android:layout_height="wrap_content"
+				        android:layout_marginLeft="6dip"
+				        android:layout_gravity="left|top"	        
+				        android:gravity="left|top"
+				        android:textSize="20sp"
+				        android:textColor="#555555"
+				        android:maxLines="2"
+				        android:ellipsize="end"
+				        />	    
+			    </LinearLayout>
 			    <LinearLayout
 			    	android:layout_width="match_parent"
 			    	android:layout_height="wrap_content"
@@ -117,6 +141,7 @@
 			        android:id="@+id/soc_image_container"
 			    	android:layout_width="wrap_content"
 			    	android:layout_height="wrap_content"
+			    	android:layout_marginTop="6dip"
 			    	android:orientation="vertical"
 			    	android:visibility="gone">	       	    
 				    <ImageView
