--- a/res/layout/social_layer.xml
+++ b/res/layout/social_layer.xml
@@ -38,34 +38,31 @@
 		android:orientation="horizontal"
 		/>	
 	
-    <FrameLayout           
+    <LinearLayout           
 		android:layout_width="fill_parent" 
-		android:layout_height="0dip"
-		android:layout_weight="1">    	
-	   	<ListView
-			android:id="@+id/social_list"
-			android:layout_width="fill_parent" 
-			android:layout_height="fill_parent"
-			android:layout_gravity="top|center_horizontal"
-			android:gravity="top|center_horizontal"				
-			android:drawSelectorOnTop="false"
-			android:cacheColorHint="@android:color/transparent"
-			android:dividerHeight="0dp"
-			android:divider="@null"
-			android:descendantFocusability="blocksDescendants"
-			/>	 	 					  	
-	</FrameLayout>					
-    <TextView
-        android:id="@+id/soc_stop"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="15dip"
-        android:layout_gravity="center"
-        android:gravity="center"       
-        android:textSize="40dip"
-        android:textColor="#FF0000"
-        android:textStyle="bold"
-        android:text="Stop!"
-        android:visibility="gone"
-        /> 				
+		android:layout_height="fill_parent"
+		android:orientation="vertical">    	
+	    <FrameLayout
+		    android:layout_width="match_parent"
+		    android:layout_height="wrap_content"
+		    android:layout_gravity="center"
+		    android:gravity="center">
+		 	<tv.tv9x9.player.SlidingTabLayout
+		          android:id="@+id/social_tabs"
+		          android:layout_width="match_parent"
+		          android:layout_height="wrap_content"
+		          android:gravity="center"
+		          android:layout_gravity="center"
+		          android:background="#1D1D1D"
+		          />
+	 	</FrameLayout> 					
+		<tv.tv9x9.player.StoppableViewPager
+		    android:id="@+id/social_pager"			  
+		    android:layout_width="fill_parent"
+		    android:layout_height="fill_parent"
+		    android:layout_gravity="top|center_horizontal"
+		    android:gravity="top|center_horizontal"
+			android:background="#FFFFFF"		    
+		    />			  	
+	</LinearLayout>									
 </LinearLayout>
